--- a/ejer3.html
+++ b/ejer3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="ejer3.html.js"></script>
+    <script src="js/array3.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
