--- a/ejer2.html
+++ b/ejer2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="ejer2.html.js"></script>
+    <script src="js/array2.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
