--- a/ejer4.html
+++ b/ejer4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="ejer4.html.js"></script>
+    <script src="js/array4.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
