--- a/ejer5.html
+++ b/ejer5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="ejer5.html.js"></script>
+    <script src="js/array5.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
