--- a/ejer6.html
+++ b/ejer6.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="js/array1.js"></script>
+    <script defer src="js/ejer6.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+<p id="result"></p>
 </body>
 </html>
